<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group
            android:id="@+id/group1"
            android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"/>
        </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_women"
            android:title="@string/women"/>
        <item
            android:id="@+id/nav_men"
            android:title="@string/men"/>
        <item
            android:id="@+id/nav_girl"
            android:title="@string/girl"/>
        <item
            android:id="@+id/nav_boy"
            android:title="@string/boy"/>
        <item
            android:id="@+id/nav_baby"
            android:title="@string/baby"/>

    </group>

        <group
            android:id="@+id/group3"
            android:checkableBehavior="none">>
            <item
                android:id="@+id/nav_manage"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/tools"/>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help"/>
        </group>


</menu>